# comet

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
crates/netlink/: Cargo.toml
crates/netlink/benches/: bench.rs
crates/netlink/examples/: addr.rs  link.rs
crates/netlink/src/: addr.rs  consts.rs  handle.rs  lib.rs  link.rs  message.rs  netlink.rs  request.rs  route.rs  socket.rs  utils.rs
examples/kind/: README.md  install.yaml  kind-config.yaml
network/: Cargo.toml
network/src/: ip.rs  lib.rs  netlink.rs  socket.rs
plugins/comet-cni/: .gitignore  Cargo.toml
plugins/comet-cni/src/: main.rs
plugins/comet-cni/src/command/: add.rs  del.rs  mod.rs  version.rs
plugins/comet-cni/src/connector/: mod.rs  veth.rs
plugins/comet-cni/src/ipam/: allocator.rs
plugins/comet-cni/src/log/: logging.rs
plugins/comet-cni/src/logging/: mod.rs
plugins/comet-cni/src/network/: mod.rs  netlink.rs
plugins/install/: Cargo.toml
plugins/install/src/: main.rs
