[package]
name = "network"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
ipnet = "2.7.1"
lazy_static = "1.4.0"
netlink-packet-core = "0.4.2"
netlink-packet-route = "0.13.0"
netlink-sys = "0.8.3"
nix = "0.26.1"
regex = "1.7.0"
