[package]
name = "netlink"
version = "0.0.1"
edition = "2021"

[[bench]]
name = "netlink-bench"
harness = false
path = "benches/bench.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
libc = "0.2.139"
nix = "0.26.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.8"

[dev-dependencies]
bencher = "0.1.5"
