[package]
name = "comet-cni"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
nix = "0.26.1"
tokio = "1.23.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
netlink-sys = "0.8.3"
netlink-packet-route = "0.13.0"
regex = "1.7.0"
lazy_static = "1.4.0"
