[package]
name = "comet-cni"
version = "0.0.1"
edition = "2021"

[dependencies]
network = { version = "0.0.1", path = "../../network" }
netlink = { version = "0.0.1", path = "../../crates/netlink" }
anyhow = "1.0.68"
nix = "0.26.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
regex = "1.7.0"
lazy_static = "1.4.0"
